load("//common:browsers.bzl", "chrome_data", "firefox_data")
load("//java:browsers.bzl", "chrome_jvm_flags", "firefox_jvm_flags")
load("//java:defs.bzl", "artifact")

filegroup(
    name = "license",
    srcs = [
        "LICENSE",
        "NOTICE",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "grid",
    actual = "//java/server/src/org/openqa/selenium/grid:executable-grid",
)

alias(
    name = "pinned-grid",
    actual = "//java/server/src/org/openqa/selenium/grid:pinned-grid",
)

alias(
    name = "debug-server",
    actual = "//java/client/test/org/openqa/selenium/environment:appserver",
)

alias(
    name = "calcdeps",
    actual = "//javascript/atoms:deps",
)

alias(
    name = "selenium-server-standalone",
    actual = "//java/server/src/org/openqa/selenium/grid:selenium_server_deploy.jar",
)

java_binary(
    name = "server",
    args = [
        "standalone",
        "--relax-checks",
        "true",
    ],
    data = chrome_data + firefox_data,
    jvm_flags = chrome_jvm_flags + firefox_jvm_flags,
    main_class = "org.openqa.selenium.grid.Bootstrap",
    runtime_deps = [
        "//java/server/src/org/openqa/selenium/grid",
        artifact("org.slf4j:slf4j-jdk14"),
    ],
)

platform(
    name = "rosetta",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)
