load("//common:browsers.bzl", "chrome_data", "firefox_data")
load("//java:browsers.bzl", "chrome_jvm_flags", "firefox_jvm_flags")
load("//java:defs.bzl", "artifact")
load("@rules_python//python:defs.bzl", "py_runtime_pair")

filegroup(
    name = "license",
    srcs = [
        "LICENSE",
        "NOTICE",
    ],
    visibility = ["//visibility:public"],
)

py_runtime(
    name = "py3_runtime",
    interpreter_path = select({
        "@platforms//os:macos": "/usr/bin/python3",
        "@platforms//os:linux": "/usr/bin/python",
        "@platforms//os:windows": "C:\\Python310\\python",
    }),
    python_version = "PY3",
    stub_shebang = "#!/usr/bin/python3",
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":py3_runtime",
)

toolchain(
    name = "py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)

alias(
    name = "grid",
    actual = "//java/src/org/openqa/selenium/grid:executable-grid",
)

alias(
    name = "pinned-grid",
    actual = "//java/src/org/openqa/selenium/grid:pinned-grid",
)

alias(
    name = "debug-server",
    actual = "//java/test/org/openqa/selenium/environment:appserver",
)

alias(
    name = "calcdeps",
    actual = "//javascript/atoms:deps",
)

alias(
    name = "selenium-server-standalone",
    actual = "//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar",
)

java_binary(
    name = "server",
    args = [
        "standalone",
        "--relax-checks",
        "true",
    ],
    data = chrome_data + firefox_data,
    jvm_flags = chrome_jvm_flags + firefox_jvm_flags,
    main_class = "org.openqa.selenium.grid.Bootstrap",
    runtime_deps = [
        "//java/src/org/openqa/selenium/grid",
        artifact("org.slf4j:slf4j-jdk14"),
    ],
)

platform(
    name = "rosetta",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)
