load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("//common:browsers.bzl", "chrome_data", "firefox_data")
load("//java:browsers.bzl", "chrome_jvm_flags", "firefox_jvm_flags")
load("//java:defs.bzl", "artifact")

# Can only use this if it returns a single file.
filegroup(
    name = "global-license",
    srcs = ["LICENSE"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "license",
    srcs = [
        ":global-license",
        "NOTICE",
    ],
    visibility = ["//visibility:public"],
)


alias(
    name = "grid",
    actual = "//java/src/org/openqa/selenium/grid:executable-grid",
)

alias(
    name = "pinned-grid",
    actual = "//java/src/org/openqa/selenium/grid:pinned-grid",
)

alias(
    name = "debug-server",
    actual = "//java/test/org/openqa/selenium/environment:appserver",
)

alias(
    name = "calcdeps",
    actual = "//javascript/atoms:deps",
)

alias(
    name = "selenium-server-standalone",
    actual = "//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar",
)

java_binary(
    name = "server",
    args = [
        "standalone",
        "--relax-checks",
        "true",
    ],
    data = chrome_data + firefox_data,
    jvm_flags = chrome_jvm_flags + firefox_jvm_flags,
    main_class = "org.openqa.selenium.grid.Bootstrap",
    runtime_deps = [
        "//java/src/org/openqa/selenium/grid",
        artifact("org.slf4j:slf4j-jdk14"),
    ],
)

platform(
    name = "rosetta",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
    tags = [
        "manual",
    ],
)
